tests/resources/valid/class/doc_strings.mamba
"""This is my file

It can do many thing
"""

class MyClass
    """This is my class

    It can do many things
    """

    def my_fun(self) -> Int =>
        """
        This is my function, it can't do so much
        """
        200
