tests/resources/invalid/type/class/access_function_wrong_type.mamba
class MyClass
    def something(self) -> String => return "my string"


def my_class <- MyClass()
def b <- my_class.something()

def c: Int <- b
